# substreams-erc20-supply

./: Cargo.toml  Makefile  README.md  erc20-balance-changes.wasm  rust-toolchain.toml  schema.graphql  schema.sql  subgraph.yaml  substreams.yaml
.github/workflows/: substreams.yml  test.yml
proto/v1/: erc20.proto  erc20.supply.proto
src/: lib.rs  maps.rs  sink.rs  sinks.rs  store.rs
src/pb/: erc20.supply.types.v1.rs  erc20.types.v1.rs  mod.rs
