[package]
name = "erc20-supply"
version = "0.1.8"
description = "ERC-20 Supply"
edition = "2021"
authors = [
    "Denis <denis@pinax.network>",
    "MathieuLefebvre <mathieu@pinax.network>"
]

[lib]
crate-type = ["cdylib"]

[dependencies]
ethabi = "18.0"
prost = "0.11"
prost-types = "0.11"
num-bigint = "0.4"
substreams = "0.5.19"
substreams-ethereum = "0.9"
substreams-entity-change = "1.3"
substreams-database-change = "1.2.1"

[build-dependencies]
prost-build = "0.11"
anyhow = "1"
substreams-ethereum = "0.9"
